--- a/app/styles/SearchBar.scss
+++ b/app/styles/SearchBar.scss
@@ -6,6 +6,7 @@
   margin-top: 15px;
   
   input[type="search"] {
+    -webkit-appearance: none;
     height: 40px;
     flex: 1;
     font-size: 1.125rem;
