--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -4,3 +4,7 @@ body {
   font-size: 16px;
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
+
+body.has-popin {
+  overflow: hidden;
+}
